# licenciameprueba

./: .gitignore  Makefile  OAUTH_SETUP.md  README.md  REPORTE_E2E.md  start.sh
backend-oficial/: .coveragerc  .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  seed.py
backend-oficial/alembic/: env.py
backend-oficial/alembic/versions/: 0001_initial.py  1c427d743149_add_engagement_stats_to_external_.py
backend-oficial/app/: main.py
backend-oficial/app/api/: admin.py  auth.py  catalog_ingest.py  exports.py  licenses.py  meta_oauth.py  metrics.py  monitoring.py  notifications_api.py  packages.py  payments.py  publish.py  social.py  tiktok_oauth.py  tracks.py
backend-oficial/app/core/: config.py  database.py  dependencies.py  exceptions.py  logging.py  scheduler.py  security.py
backend-oficial/app/models/: __init__.py  analytics.py  audit.py  auth.py  base.py  catalog.py  monitoring.py  packages.py  publishing.py  social.py
backend-oficial/app/schemas/: __init__.py  auth.py  catalog.py  monitoring.py  packages.py  publishing.py  social.py
backend-oficial/scripts/: ingest_catalog.py
backend-oficial/tests/: conftest.py  test_acrcloud_service.py  test_api_endpoints.py  test_api_expanded.py  test_audit_service.py  test_auth.py  test_auth_service.py  test_auto_scan.py  test_dependencies.py  test_eligibility_service.py  test_exceptions.py  test_health.py  test_monitoring_service.py  test_package_service.py  test_profile_scraper.py  test_publish_service.py  test_security.py  test_social_download_service.py
(+780 files in other folders)
